--- a/index.html
+++ b/index.html
@@ -1,61 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Roastoria</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body { margin:0; font-family:Arial, sans-serif; background:#f7f3eb; color:#3a2e29; }
-header { padding:60px 20px; text-align:center; background:#e7dccb; }
-header h1 { margin:0; font-size:48px; letter-spacing:2px; }
-header p { margin-top:10px; font-size:18px; }
-section { padding:50px 20px; max-width:900px; margin:auto; line-height:1.6; }
-.button { display:inline-block; margin-top:20px; padding:12px 24px; background:#3a2e29; color:#fff; text-decoration:none; border-radius:4px; }
-.products { display:flex; justify-content:space-around; flex-wrap:wrap; margin-top:40px; }
-.card { background:white; border-radius:6px; padding:20px; width:260px; margin:10px; box-shadow:0 3px 8px rgba(0,0,0,0.14); text-align:center; }
-footer { text-align:center; padding:30px; font-size:14px; color:#6b5f58; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Roastoria Coffee</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Roastoria Coffee</h1>
+    <p>Small batch • Freshly roasted • Quality first</p>
+  </header>
 
-<header>
-  <h1>Roastoria</h1>
-  <p>Small-batch roasted coffee. Crafted with care.</p>
-</header>
+  <section class="hero">
+    <h2>The Art of Coffee</h2>
+    <p>We source premium beans and roast with passion.</p>
+  </section>
 
-<section>
-  <h2>Fresh. Local. Real.</h2>
-  <p>
-    At Roastoria, we believe in the art of roasting. Our beans are selected carefully
-    and roasted in small batches to ensure perfect flavor, aroma, and balance.
-  </p>
-
-  <div class="products">
+  <section class="products">
     <div class="card">
-      <h3>House Blend</h3>
-      <p>Smooth and balanced. Perfect for everyday brewing.</p>
-      <strong>39 zł / 250g</strong>
+      <h3>Brazil Santos</h3>
+      <p>Nutty & smooth • Medium roast</p>
     </div>
-
     <div class="card">
-      <h3>Espresso Roast</h3>
-      <p>Bold and deep. Ideal for espresso or moka pot.</p>
-      <strong>42 zł / 250g</strong>
+      <h3>Colombia Supremo</h3>
+      <p>Balanced & fruity • Medium-light roast</p>
     </div>
-
     <div class="card">
-      <h3>Single Origin</h3>
-      <p>Unique flavor notes from selected farms.</p>
-      <strong>44 zł / 250g</strong>
+      <h3>Ethiopia Yirgacheffe</h3>
+      <p>Floral & bright • Light roast</p>
     </div>
-  </div>
+  </section>
 
-  <a href="#" class="button">Order coming soon</a>
-</section>
-
-<footer>
-  Roastoria © 2025 · Wrocław, Poland
-</footer>
-
+  <footer>
+    <p>Roastoria © 2025</p>
+  </footer>
 </body>
 </html>
